--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <handlebars.version>4.4.0</handlebars.version>
         <modular.version>0.0.1</modular.version>
         <my-kafka-tool.version>0.1.1-SNAPSHOT</my-kafka-tool.version>
+        <lombok.version>1.18.38</lombok.version>
     </properties>
 
 
