--- a/my-kafka-tool-launcher/src/main/bin/config.properties
+++ b/my-kafka-tool-launcher/src/main/bin/config.properties
@@ -1,8 +1,8 @@
 #Global MyKafkaTool Properties
 #Tue Jun 24 18:24:39 EDT 2025
-main.artifact.download-url=http\://localhost\:8080
+main.artifact.download-url=http\://localhost\:8080/io/github/nhtuan10/my-kafka-tool-main
 main.artifact.fileName-prefix=my-kafka-tool-main-${version}
-main.artifact.maven-metadata-url=http\://localhost\:8080/maven-metadata-local.xml
-main.artifact.snapshot-maven-metadata-url=http\://localhost\:8080/${version}/maven-metadata-local.xml
+main.artifact.maven-metadata-fileName=maven-metadata-local.xml
+main.artifact.snapshot-maven-metadata-fileName=${version}/maven-metadata-local.xml
 main.artifact.directory=lib
 main.artifact.version=0.1.1-SNAPSHOT
