--- a/my-kafka-tool-main/pom.xml
+++ b/my-kafka-tool-main/pom.xml
@@ -157,16 +157,16 @@
             <artifactId>dagger</artifactId>
             <version>2.56.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.groovy</groupId>
-            <artifactId>groovy</artifactId>
-            <version>4.0.23</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-templates</artifactId>
-            <version>3.0.25</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.groovy</groupId>-->
+        <!--            <artifactId>groovy</artifactId>-->
+        <!--            <version>4.0.23</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.codehaus.groovy</groupId>-->
+        <!--            <artifactId>groovy-templates</artifactId>-->
+        <!--            <version>3.0.25</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.github.jknack</groupId>
             <artifactId>handlebars</artifactId>
