--- a/my-kafka-tool-main/pom.xml
+++ b/my-kafka-tool-main/pom.xml
@@ -52,6 +52,11 @@
         </dependency>
         <dependency>
             <groupId>io.github.nhtuan10</groupId>
+            <artifactId>my-kafka-tool-api</artifactId>
+            <version>${my-kafka-tool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.nhtuan10</groupId>
             <artifactId>modular-api</artifactId>
             <version>${modular.version}</version>
         </dependency>
@@ -98,16 +103,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.16.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.16.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.16.0</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+        <!--            <artifactId>jackson-core</artifactId>-->
+        <!--            <version>2.16.0</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+        <!--            <artifactId>jackson-annotations</artifactId>-->
+        <!--            <version>2.16.0</version>-->
+        <!--        </dependency>-->
 
         <!-- Kafka -->
         <dependency>
