--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
     <version>0.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>my-kafka-tool-main</module>
+        <module>my-kafka-tool-api</module>
         <module>my-kafka-tool-misc</module>
+        <module>my-kafka-tool-ext</module>
+        <module>my-kafka-tool-main</module>
         <module>my-kafka-tool-launcher</module>
     </modules>
     <properties>
