--- a/my-kafka-tool-main/pom.xml
+++ b/my-kafka-tool-main/pom.xml
@@ -59,6 +59,12 @@
             <groupId>io.github.nhtuan10</groupId>
             <artifactId>modular-impl</artifactId>
             <version>${modular.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                    <artifactId>shrinkwrap-resolver-depchain</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- JavaFX -->
         <dependency>
