--- a/my-kafka-tool-launcher/src/main/resources/config.properties
+++ b/my-kafka-tool-launcher/src/main/resources/config.properties
@@ -8,3 +8,4 @@ artifact.snapshot-maven-metadata-fileName=${version}/maven-metadata-local.xml
 artifact.directory=.
 artifact.version=0.1.1.5-SNAPSHOT
 isDeployed=true
+maven.http.timeout=5
