--- a/my-kafka-tool-api/pom.xml
+++ b/my-kafka-tool-api/pom.xml
@@ -26,6 +26,14 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.16.0</version>
+            <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.16.0</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 </project>
